# DataBasis

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
databasis/: manage.py
databasis/accounts/migrations/: 0001_initial.py
databasis/accounts/templates/registration/: login.html
databasis/core/: asgi.py  settings.py  urls.py  wsgi.py
databasis/core/templates/: base.html
databasis/databasis/: asgi.py  settings.py  wsgi.py
databasis/front_page/: urls.py  views.py
databasis/queries/: admin.py  forms.py  models.py  urls.py  views.py
databasis/queries/migrations/: 0001_initial.py  0002_auto_20200923_1225.py  0003_historicalquery.py  0004_query_keywords.py
databasis/queries/templates/queries/: query_confirm_delete.html  query_detail.html  query_form.html  query_list.html
databasis/questions/: admin.py  models.py  urls.py  views.py
databasis/questions/migrations/: 0001_initial.py  0002_question_keywords.py  0003_question_queries.py
databasis/questions/templates/questions/: question_confirm_delete.html  question_detail.html  question_form.html  question_list.html
