[tool.poetry]
name = "databasis"
version = "0.1.0"
description = "A tool to document database structure and key company metrics as well as share queries."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
