[tool.poetry]
name = "databasis"
version = "0.1.0"
description = "A tool to document database structure and key company metrics as well as share queries."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"
django_ace = "^1.0.7"
django-taggit = "^1.3.0"
django-crispy-forms = "^1.9.2"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
